--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -111,7 +111,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 32px;
+    gap: 4px;
     z-index: 10;
 }
 
@@ -271,6 +271,11 @@ textarea::-ms-input-placeholder    { @include placeholder-style; }
     width: 100%;
     transform: rotateX(60deg) scale(0.96) translateX(150px);
     opacity: 0;
+    min-height: 80px;
+}
+
+.contact-form-group-message {
+  min-height: 236px;
 }
 
 .contact-form-group.is-inview {
